Avoid overflow by using scientific notation

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
     grid-column: 1 / 5;
     grid-row: 1 / 3;
     margin-bottom: 30px;
-    overflow: hidden;
 }
 
 #screen p {
